// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`parse addition 1`] = `
Block {
  "expressions": [
    Binary {
      "left": Binary {
        "left": Binary {
          "left": Literal {
            "type": "Float",
            "value": "1.22",
          },
          "operator": "+",
          "right": Literal {
            "type": "Float",
            "value": "1.23",
          },
          "type": "Float",
        },
        "operator": "+",
        "right": Literal {
          "type": "Int",
          "value": "8",
        },
        "type": "Float",
      },
      "operator": "+",
      "right": Literal {
        "type": "Float",
        "value": "3.13",
      },
      "type": "Float",
    },
  ],
  "type": "Float",
}
`;

exports[`parse subtraction 1`] = `
Block {
  "expressions": [
    Binary {
      "left": Binary {
        "left": Binary {
          "left": Literal {
            "type": "Float",
            "value": "1.22",
          },
          "operator": "-",
          "right": Literal {
            "type": "Float",
            "value": "1.23",
          },
          "type": "Float",
        },
        "operator": "-",
        "right": Literal {
          "type": "Int",
          "value": "8",
        },
        "type": "Float",
      },
      "operator": "-",
      "right": Literal {
        "type": "Float",
        "value": "3.13",
      },
      "type": "Float",
    },
  ],
  "type": "Float",
}
`;

exports[`parse multiplication 1`] = `
Block {
  "expressions": [
    Binary {
      "left": Binary {
        "left": Binary {
          "left": Literal {
            "type": "Float",
            "value": "1.22",
          },
          "operator": "*",
          "right": Literal {
            "type": "Float",
            "value": "1.23",
          },
          "type": "Float",
        },
        "operator": "*",
        "right": Literal {
          "type": "Int",
          "value": "8",
        },
        "type": "Float",
      },
      "operator": "*",
      "right": Literal {
        "type": "Float",
        "value": "3.13",
      },
      "type": "Float",
    },
  ],
  "type": "Float",
}
`;

exports[`parse division 1`] = `
Block {
  "expressions": [
    Binary {
      "left": Binary {
        "left": Binary {
          "left": Literal {
            "type": "Float",
            "value": "1.22",
          },
          "operator": "/",
          "right": Literal {
            "type": "Float",
            "value": "1.23",
          },
          "type": "Float",
        },
        "operator": "/",
        "right": Literal {
          "type": "Int",
          "value": "8",
        },
        "type": "Float",
      },
      "operator": "/",
      "right": Literal {
        "type": "Float",
        "value": "3.13",
      },
      "type": "Float",
    },
  ],
  "type": "Float",
}
`;

exports[`parse order of operations 1`] = `
Block {
  "expressions": [
    Binary {
      "left": Literal {
        "type": "Float",
        "value": "1.22",
      },
      "operator": "+",
      "right": Binary {
        "left": Binary {
          "left": Literal {
            "type": "Float",
            "value": "1.23",
          },
          "operator": "*",
          "right": Literal {
            "type": "Int",
            "value": "8",
          },
          "type": "Float",
        },
        "operator": "/",
        "right": Literal {
          "type": "Float",
          "value": "3.13",
        },
        "type": "Float",
      },
      "type": "Float",
    },
  ],
  "type": "Float",
}
`;

exports[`parse parens 1`] = `
Block {
  "expressions": [
    Binary {
      "left": Binary {
        "left": Binary {
          "left": Literal {
            "type": "Float",
            "value": "1.22",
          },
          "operator": "+",
          "right": Literal {
            "type": "Float",
            "value": "1.23",
          },
          "type": "Float",
        },
        "operator": "*",
        "right": Literal {
          "type": "Int",
          "value": "8",
        },
        "type": "Float",
      },
      "operator": "/",
      "right": Literal {
        "type": "Float",
        "value": "3.13",
      },
      "type": "Float",
    },
  ],
  "type": "Float",
}
`;

exports[`parse block 1`] = `
Block {
  "expressions": [
    Block {
      "expressions": [
        Binary {
          "left": Binary {
            "left": Literal {
              "type": "Float",
              "value": "1.22",
            },
            "operator": "+",
            "right": Binary {
              "left": Literal {
                "type": "Float",
                "value": "1.23",
              },
              "operator": "*",
              "right": Block {
                "expressions": [
                  Binary {
                    "left": Literal {
                      "type": "Int",
                      "value": "8",
                    },
                    "operator": "/",
                    "right": Literal {
                      "type": "Float",
                      "value": "3.13",
                    },
                    "type": "Float",
                  },
                ],
                "type": "Float",
              },
              "type": "Float",
            },
            "type": "Float",
          },
          "operator": "+",
          "right": Literal {
            "type": "Float",
            "value": "2.",
          },
          "type": "Float",
        },
      ],
      "type": "Float",
    },
  ],
  "type": "Float",
}
`;

exports[`parse block 2`] = `
Block {
  "expressions": [
    DropValue {
      "child": Binary {
        "left": Literal {
          "type": "Int",
          "value": "1",
        },
        "operator": "+",
        "right": Literal {
          "type": "Int",
          "value": "1",
        },
        "type": "Int",
      },
      "type": "Null",
    },
    Assignment {
      "isDropped": true,
      "name": "x",
      "type": "Null",
      "value": Unary {
        "child": Literal {
          "type": "Int",
          "value": "2",
        },
        "operator": "-",
        "type": "Int",
      },
    },
    Unary {
      "child": Variable {
        "name": "x",
        "type": "Int",
      },
      "operator": "-",
      "type": "Int",
    },
  ],
  "type": "Int",
}
`;

exports[`parse variable assignment 1`] = `
Block {
  "expressions": [
    Assignment {
      "isDropped": false,
      "name": "x",
      "type": "Float",
      "value": Literal {
        "type": "Float",
        "value": "1.22",
      },
    },
    Assignment {
      "isDropped": false,
      "name": "y",
      "type": "Float",
      "value": Block {
        "expressions": [
          Literal {
            "type": "Float",
            "value": "1.23",
          },
        ],
        "type": "Float",
      },
    },
    Assignment {
      "isDropped": true,
      "name": "z",
      "type": "Null",
      "value": Literal {
        "type": "Float",
        "value": "3.13",
      },
    },
    Assignment {
      "isDropped": false,
      "name": "x",
      "type": "Int",
      "value": Literal {
        "type": "Int",
        "value": "3",
      },
    },
  ],
  "type": "Int",
}
`;

exports[`parse variable assignment 2`] = `
[
  "On line 1, column 5, Variable assignments are not allowed within expressions.",
]
`;

exports[`parse variable assignment 3`] = `
[
  "On line 1, column 5, Variable assignments are not allowed within expressions.",
]
`;
